--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,26 @@
   <title>division5 - We build software for humans</title>
 
 </head>
+<style>
+  .loader {
+    width: 100%; height:100vh;background-color: black; position:static; z-index: 5;
+  }
+  .container {
+    margin: auto; width: 300px; height: 100vh;
+  }
+  .helper {
+    display: inline-block;height: 25%;vertical-align: middle;
+  }
+  .logo {
+    vertical-align: middle;
+  }
 
+</style>
 <body style="margin: 0; overflow-y:hidden;">
-  <div id="loader" style="width: 100%; height:100vh;background-color: black; position:static; z-index: 5;">
-    <div style="margin: auto; width: 300px; height: 100vh;">
-      <span style="display: inline-block;height: 25%;vertical-align: middle;"></span>
-      <img style="vertical-align: middle;" src="https://lightyear-game.vercel.app/assets/images/loading.gif" />
+  <div id="loader" class="loader">
+    <div class="container">
+      <span class="helper"></span>
+      <img class="logo" src="https://lightyear-game.vercel.app/assets/images/loading.gif" />
     </div>
   </div>
   <canvas style="width: 100%; height: 100%" id="view" ></canvas>
