fixed style of loading

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="Description" content="Babylon Sample App using TypeScript">
 
-  <title>division5 - We build software for humans</title>
+  <title>lightyear-game</title>
 
 </head>
 <style>
@@ -23,6 +23,9 @@
   .logo {
     vertical-align: middle;
   }
+  .canvas {
+    width: 100%; height: 100vh;
+  }
 
 </style>
 <body style="margin: 0; overflow-y:hidden;">
@@ -32,7 +35,7 @@
       <img class="logo" src="https://lightyear-game.vercel.app/assets/images/loading.gif" />
     </div>
   </div>
-  <canvas style="width: 100%; height: 100%" id="view" ></canvas>
+  <canvas class="canvas" id="view" ></canvas>
 </body>
 
 </html>
