--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 </head>
 <style>
   .loader {
-    width: 100%; height:100vh;background-color: black; position:static; z-index: 5;
+    width: 100%; height:100vh;background-color: #001118; position:static; z-index: 5;
   }
   .container {
     margin: auto; width: 300px; height: 100vh;
@@ -24,7 +24,7 @@
     vertical-align: middle;
   }
   .canvas {
-    width: 100%; height: 100vh;
+    width: 100%; height: 100vh; display: none;
   }
 
 </style>
